--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,7 +10,7 @@
             <% title = book.title.strip.gsub(/[[:punct:]]/, ' ').split.map(&:capitalize).join(' ') %>
             <%= link_to "/books/list/#{title.gsub(' ', '_')}", method: 'get' do %>
               <div class="book-card">
-                <div class="card-book-picture"><%= cl_image_tag book.cover_photo, width: 100, height: 100 %></div>
+                <div class="card-book-picture"><%= cl_image_tag book.cover_photo, default_image: "default_image.png", width: 100, height: 100 %></div>
                 <div class="card-description">
                   <h2><%= title %></h2>
                   <p><%= book.publisher %></p>
