--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -14,13 +14,6 @@
 		</div>
 		<div class="sidebar col-md-2  hidden-sm hidden-xs">
 			<%= form_tag(url: "/books/list/#{params}", method: :get) do -%>
-				<!-- <div class="row">
-					<div class= "field">
-						<p>University:</p>
-						<%#= select_tag :university, content_tag(:option,'select one...',:value=>"")+options_from_collection_for_select(
-								@universities, 'university', 'university', params[:university]) %>
-					</div>
-				</div>  -->
 				<div class="row">
 					<div class= "field">
 						<p>Edition:</p>
@@ -45,17 +38,10 @@
 								'subject', 'subject', params[:subject]) %>
 					</div>
 				</div>
-				<!-- <div class="row">
-					<div class= "field">
-						<p>Price:</p>
-						<%#= select_tag :price, content_tag(:option,'select one...',:value=>"")+options_from_collection_for_select(
-						@books.uniq(&:price).sort_by(&:price), 'price', 'price', params[:price]) %>
-					</div>
-				</div> -->
 				<div class="row">
 					<div class="field filter">
-					    <%= hidden_field_tag :title, @title %>
-					    <%= submit_tag 'Filter' %>
+						<%= hidden_field_tag :title, @title %>
+						<%= submit_tag 'Filter' %>
 					</div>
 				</div>
 			<% end %>
@@ -63,39 +49,39 @@
 	</div>
 	<div class="row">
 		<% @books.each do |book| %>
-		<div class="col-xs-12 col-md-2 list-card">
-			<div class="list-book-picture" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
-			 url(<%= cl_image_tag book.cover_photo || image_path "100x100.png"  %>);"></div>
-			<div class="avatar-container">
-				<%= image_tag book.user.facebook_picture_url || "100x100.png", class: "avatar avatar-large" %>
-			</div>
-			<div class="book-info">
-				<div class="price">
-	  				<p>$<%= book.price %></p>
+			<div class="col-xs-12 col-md-2 list-card">
+				<div class="list-book-picture" style='background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= cl_image_path("#{book.cover_photo}"), alt: "#{image_path \'100x100.png\'}"  %>);'></div>
+					<div class="avatar-container">
+						<%= image_tag book.user.facebook_picture_url || "100x100.png", class: "avatar avatar-large" %>
+					</div>
+					<div class="book-info">
+						<div class="price">
+		  				<p>$<%= book.price %></p>
+						</div>
+					<div class="subject">
+							<p><%= book.subject %></p>
+					</div>
 				</div>
-				<div class="subject">
-					<p><%= book.subject %></p>
-				</div>
-			</div>
-		  <div class="book-details">
-			<div class="university">
-				<p><strong>University:</strong></p>
-				<p><%= book.user.university %></p>
-			</div>
-			<div class="condition">
-				<p><strong>Condition:</strong></p>
-				<p><%= book.condition %></p>
-			</div>
-			<div class="description">
-				 <p><strong>Description:</strong></p>
-				<p><%= book.description.strip %></p>
-			</div>
-			<div class="buy">
-				<%= link_to purchases_path(id: book.id), method: :post do %>
-					<div class="btn btn-primary checkout">Add to Cart</div>
-				<% end %>
-			</div>
-		  </div>
+		  	<div class="book-details">
+					<div class="university">
+						<p><strong>University:</strong></p>
+						<p><%= book.user.university %></p>
+					</div>
+					<div class="condition">
+						<p><strong>Condition:</strong></p>
+						<p><%= book.condition %></p>
+					</div>
+					<div class="description">
+				 		<p><strong>Description:</strong></p>
+						<p><%= book.description.strip %></p>
+					</div>
+					<div class="buy">
+						<%= link_to purchases_path(id: book.id), method: :post do %>
+							<div class="btn btn-primary checkout">Add to Cart
+							</div>
+						<% end %>
+					</div>
+		  	</div>
 		  </div>
 		<% end %>
 	</div>
